--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header class="ini">
         <div class="logo">
-            <img src="imgs/Logo Laropa.png" alt="Company Logo">
+            <a href="index.html">
+                <img src="imgs/Logo Laropa.png" alt="Company Logo">
+            </a>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">
             <div class="line"></div>
