--- a/customize.html
+++ b/customize.html
@@ -75,17 +75,16 @@
                     <option value="25x25">25 x 25</option>
                     <option value="25x35">25 x 35</option>
                 </select>
+            <!-- Price Section -->
+            <div class="price-container">
+                <p id="price"><span id="price-value"></span></p>
+            </div>
+    
+            <div class="button-container">
+                <button id="checkout-button" class="cart" onclick="window.location.href='cart.html'" disabled>Check out</button>
+            </div>
             </form>
         </section>
-
-        <!-- Price Section -->
-        <div class="price-container">
-            <p id="price"><span id="price-value"></span></p>
-        </div>
-
-        <div class="button-container">
-            <button id="checkout-button" class="cart" onclick="window.location.href='cart.html'" disabled>Check out</button>
-        </div>
     </main>
 
     <script src="scripts.js"></script>    
@@ -162,10 +161,10 @@
     </script>
 </body>
 
-<footer class="footer">
-    <div class="footer-container">
+<footer class="footer2">
+    <div class="footer2-container">
         <!-- First Column: LAROPA and Contact Info -->
-        <div class="footer-column">
+        <div class="footer2-column">
             <h3>LAROPA</h3>
             <p>CONTACT</p>
             <p>Monday - Friday: 9am - 6pm</p>
@@ -173,21 +172,21 @@
         </div>
 
         <!-- Second Column: SHOP -->
-        <div class="footer-column">
+        <div class="footer2-column">
             <h3>SHOP</h3>
             <p><a href="#">Help Center</a></p>
             <p><a href="#">Initiate a return</a></p>
         </div>
 
         <!-- Third Column: LEGAL -->
-        <div class="footer-column">
+        <div class="footer2-column">
             <h3>LEGAL</h3>
             <p><a href="#">Items & Conditions</a></p>
             <p><a href="#">Privacy Policy</a></p>
         </div>
 
         <!-- Fourth Column: SOCIAL -->
-        <div class="footer-column">
+        <div class="footer2-column">
             <h3>SOCIAL</h3>
             <p><a href="#">Instagram</a></p>
             <p><a href="#">TikTok</a></p>
