--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,7 @@
         </div>
         <nav id="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Home</a></li>
                 <li><a href="#us">Us</a></li>
                 <li><a href="#process">Our Process</a></li>
                 <li><a href="#sustainability">Sustainability</a></li>
@@ -30,18 +30,19 @@
 
     <!-- Display selected image based on choices -->
     <main>
-        <section class="cart">
-            <img id="cart-image" src="" alt="Selected Product" />
-            <section class="cart-summary">
-                <div class="cart-details">
-                    <p><strong>Size:</strong> <span id="cart-size"></span></p>
-                    <p><strong>Color:</strong> <span id="cart-color"></span></p>
-                    <p><strong>Location:</strong> <span id="cart-location"></span></p>
-                    <p><strong>Embroidery Size:</strong> <span id="cart-embroidery-size"></span></p>
-                    <p><strong>Price:</strong> <span id="cart-price"></span></p>
-                </div>
+        <section class="cart-customization">
+            <section class="cart">
+                <img id="cart-image" src="" alt="Selected Product" />
+                <section class="cart-summary">
+                    <div class="cart-details">
+                        <p><strong>Size:</strong> <span id="cart-size"></span></p>
+                        <p><strong>Color:</strong> <span id="cart-color"></span></p>
+                        <p><strong>Location:</strong> <span id="cart-location"></span></p>
+                        <p><strong>Embroidery Size:</strong> <span id="cart-embroidery-size"></span></p>
+                        <p><strong>Price:</strong> <span id="cart-price"></span></p>
+                    </div>
+                </section>
             </section>
-        </section>
             <!-- Description Section -->
             <section class="description-section">
                 <h2>Description</h2>
@@ -70,7 +71,7 @@
                     </div>
                 </form>
             </section>
-                       
+        </section>
     </main>
 
     <script src="scripts.js"></script>
