--- a/customize.html
+++ b/customize.html
@@ -21,6 +21,7 @@
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="#us">Us</a></li>
                 <li><a href="#process">Our Process</a></li>
                 <li><a href="#sustainability">Sustainability</a></li>
@@ -75,6 +76,7 @@
                     <option value="25x25">25 x 25</option>
                     <option value="25x35">25 x 35</option>
                 </select>
+                
                 <!-- Price Section -->
                 <div class="price-container">
                     <p id="price"><span id="price-value"></span></p>
