--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <nav id="menu">
             <ul>
-                <li><a href="customize.html">Shop</a></li>
+                <li><a href="shop.html">Shop</a></li>
                 <li><a href="#us">Us</a></li>
                 <li><a href="#process">Our Process</a></li>
                 <li><a href="#sustainability">Sustainability</a></li>
