--- a/cart.html
+++ b/cart.html
@@ -124,7 +124,7 @@
                 image.src = "imgs/Chaleco Gris Bordes.png";
                 image.alt = "Grey Chaleco Borders";
             } else if (color === "grey" && location === "complete") {
-                image.src = "imgs/Chaleco Gris bordado Completo.png";
+                image.src = "imgs/Chaleco Gris bordado completo.png";
                 image.alt = "Brown Chaleco Borders";         
             } else if (color === "beige" && embroiderySize === "20x20" && location === "back") {
                 image.src = "imgs/Chaleco Beige Back 20x20.png";
