--- a/cart.html
+++ b/cart.html
@@ -127,7 +127,7 @@
                 image.src = "imgs/Chaleco Gris bordado completo.png";
                 image.alt = "Brown Chaleco Borders";         
             } else if (color === "beige" && embroiderySize === "20x20" && location === "back") {
-                image.src = "imgs/Chaleco Beige Back 20x20.png";
+                image.src = "imgs/Chaleco Beige back 20x20.png";
                 image.alt = "Brown Chaleco Back 20x20";
             } else if (color === "beige" && embroiderySize === "25x25" && location === "back") {
                 image.src = "imgs/Chaleco Beige Back 25x25.png";
