--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,8 @@
         </div>
         <nav id="menu">
             <ul>
-                <li><a href="customize.html">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="customize.html">Customize</a></li>
                 <li><a href="#us">Us</a></li>
                 <li><a href="#process">Our Process</a></li>
                 <li><a href="#sustainability">Sustainability</a></li>
@@ -30,20 +31,47 @@
     </header>
 
     <main>
-        <section class="shop">
-            <div class="shop-item">
-                <img src="imgs/Chaleco Laropa Front.png" alt="chaleco 1"> 
-                <p>pronto?</p>
-            </div>
-            <div class="shop-item">
-                <img src="imgs/Chaleco Laropa Front.png" alt="chaleco 1"> 
-                <p>pronto?</p>
-            </div>
-            <div class="shop-item">
-                <img src="imgs/Chaleco Laropa Front.png" alt="chaleco 1"> 
-                <p>pronto?</p>
-            </div>
-        </section>        
+        <section class="shop-container">
+            <section class="shop">
+                <div class="shop-item">
+                    <img src="imgs/Chaleco Laropa Front.png"> 
+                    <p><b>Vest</b> <br> Grey </p>
+                </div>
+                <div class="shop-item">
+                    <img src="imgs/Chaleco Beige Laropa.png"> 
+                    <p><b>Vest</b> <br> Beige </p>
+                </div>
+            </section>  
+            
+            <section class="shop">
+                <div class="shop-item">
+                    <img src="imgs/Pantalon Gris Laropa.png"> 
+                    <p><b>Jeans</b> <br> Grey </p>
+                </div>
+                <div class="shop-item">
+                    <img src="imgs/Pantalon Beige Laropa.png"> 
+                    <p><b>Jeans</b> <br> Beige </p>
+                </div>
+            </section>  
+
+            <section class="shop">
+                <div class="shop-item">
+                    <img src="imgs/Chaqueta LAROPA.png"> 
+                    <p><b>Jacket</b> <br> Denim </p>
+                </div>
+                <div class="shop-item">
+                    <img src="imgs/Falda laropa.png"> 
+                    <p><b>Skirt</b> <br> Denim </p>
+                </div>
+            </section>  
+
+            <section class="shop">
+                <div class="shop-item">
+                    <img src="imgs/Vestido LAROPA.png">
+                    <p><b>Dress</b> <br> Denim </p>
+                </div>
+            </section>  
+        </section>
     </main>
 
     <script src="scripts.js"></script>
