--- a/DigitalPassport.html
+++ b/DigitalPassport.html
@@ -18,6 +18,15 @@
 
     <main>
         <section class="full-qr">
+            <section class="story-nav">
+                <p class="greeting">Hi, María...</p>
+                <div class="links">
+                    <span class="plain-text">Take Care of me</span>
+                    <span class="plain-text active">My Story</span>
+                    <span class="plain-text">Future</span>
+                </div>
+            </section>            
+            
             <img src="imgs/Digital Passport.png">
             <section class="qr-section">
                 <p>Help us continue building the story</p>
