--- a/shop.html
+++ b/shop.html
@@ -35,11 +35,11 @@
             <section class="shop">
                 <div class="shop-item">
                     <img src="imgs/Chaleco Laropa Front.png"> 
-                    <p><b>Vest</b> <br> Grey </p>
+                    <p><a href="customize.html"><b>Vest</b></a> <br> Grey </p>
                 </div>
                 <div class="shop-item">
                     <img src="imgs/Chaleco Beige Laropa.png"> 
-                    <p><b>Vest</b> <br> Beige </p>
+                    <p><a href="customize.html"><b>Vest</b></a> <br> Beige </p>
                 </div>
             </section>  
             
