--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Cart</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Flatpickr CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
     <header class="ini">
@@ -59,12 +61,12 @@
                 <form id="schedule-form">
                     <div>
                         <label for="call-date">Choose a Date:</label>
-                        <input type="date" id="call-date">
+                        <input type="text" id="call-date">
                     </div>
             
                     <div>
                         <label for="call-time">Choose a Time:</label>
-                        <input type="time" id="call-time">
+                        <input type="text" id="call-time" readonly>
                     </div>            
                     <div class="sub-butt">
                         <button type="submit">Schedule</button>
@@ -124,7 +126,7 @@
                 image.src = "imgs/Chaleco Gris Bordes.png";
                 image.alt = "Grey Chaleco Borders";
             } else if (color === "grey" && location === "complete") {
-                image.src = "imgs/Chaleco Gris bordado completo.png";
+                image.src = "imgs/Chaleco Gris bordado Completo.png";
                 image.alt = "Brown Chaleco Borders";         
             } else if (color === "beige" && embroiderySize === "20x20" && location === "back") {
                 image.src = "imgs/Chaleco Beige back 20x20.png";
@@ -159,6 +161,28 @@
                     }
                 }
             }
+        });
+    </script>
+    <!-- Flatpickr JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script>
+        // Initialize Flatpickr
+        flatpickr("#call-date", {
+            dateFormat: "Y-m-d",  // Format as YYYY-MM-DD
+            minDate: "today",     // Disable past dates
+            altInput: true,       // Show prettier format in input
+            altFormat: "F j, Y",  // Display date as "November 12, 2024"
+        });
+        // Initialize Flatpickr for time selection
+        flatpickr("#call-time", {
+            enableTime: true,               // Enable time selection
+            noCalendar: true,               // Disable calendar view (just time)
+            dateFormat: "H:i",              // Time format (24-hour)
+            minuteIncrement: 15,            // Time steps of 15 minutes
+            time_24hr: true,                // Use 24-hour format
+            altInput: true,                 // Use a prettier input format
+            altFormat: "H:i",               // Show time in "HH:MM" format
+            allowInput: false,              // Disable manual input entirely
         });
     </script>
 
