--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <!-- Our Process Section -->
         <section id="process">
-            <h2>OUR PROCESS</h2>
+            <h2>Our Process</h2>
             <img src="imgs/PROCESS.png" alt="Our Process">
             <br>
             <button onclick="window.location.href=''">Learn More</button>
